Fix layout issues

--- a/frontend/styles/_courseCard.scss
+++ b/frontend/styles/_courseCard.scss
@@ -41,9 +41,7 @@
   @media screen and (max-width: 1024px) {
     .ant-card {
       min-width: 20rem;
-      max-width: 20rem;
       min-height: 35rem;
-      max-height: 35rem;
     }
 
     .card-image {
